[package]
name = "fixture"
version = "0.2.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/fixture"
homepage = "https://github.com/stainless-steel/fixture"
documentation = "https://stainless-steel.github.io/fixture"
description = "The package provides auxiliary routines for testing."
