[package]
name = "fixture"
version = "0.3.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides auxiliary routines for testing."
documentation = "https://docs.rs/fixture"
homepage = "https://github.com/stainless-steel/fixture"
repository = "https://github.com/stainless-steel/fixture"
